venue-info carousel: WIP: prevent tab-jump; set item tabindex only if needed; separate out carousel component and move venue-info component to vam-web

--- a/src/components/blocks/venue-info/_venue-info.scss
+++ b/src/components/blocks/venue-info/_venue-info.scss
@@ -27,6 +27,7 @@
 
   &__viewport {
     overflow: hidden;
+    scroll-behavior: smooth; // necessary to prevent browser jumping instantly when focussing off-screen elements
 
     @include mixins.breakpoints-bpMinLarge {
       margin-left: calc((var(--template-width) - 100vw) / 2);
